# indivrotate

./: Cargo.toml  README.md
src/: dirpressr.rs  firstpressi.rs  get_dirlistr.rs  listpressi.rs  main.rs  main01.rs  nextpressi.rs  rotatepressi.rs
