[package]
name = "indivrotatec1310"
version = "0.1.0"
authors = ["jp <jpercyasnet@yahoo.com>"]
edition = "2021"
publish = false

[dependencies]
iced = { version = "^0", features = ["async-std", "image", "debug"] }
serde = { version = "^0", features = ["derive"] }
rfd = { version = "^0", features = ["xdg-portal"] }
image = "^0"
